@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.sdk.state;
 
+import co.elastic.apm.agent.sdk.weakmap.NullCheck;
 import com.blogspot.mydailyjava.weaklockfree.DetachedThreadLocal;
 
 import javax.annotation.Nullable;
@@ -80,6 +81,14 @@ public class GlobalThreadLocal<T> extends DetachedThreadLocal<T> {
             return value;
         }
         return defaultValue;
+    }
+
+    @Override
+    public void set(@Nullable T value) {
+        if (NullCheck.isNullKey(value)) {
+            return;
+        }
+        super.set(value);
     }
 
     @Override
